findings/2026-04-06-0004/ryusim_stderr.txt
Error: Build failed
gmake[2]: Entering directory '/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/build'
gmake[3]: Entering directory '/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/build'
gmake[4]: Entering directory '/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/build'
gmake[4]: Leaving directory '/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/build'
gmake[4]: Entering directory '/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/build'
[ 25%] Building CXX object CMakeFiles/expression_00000_modules_0.dir/design_metadata.cpp.o
[ 25%] Building CXX object CMakeFiles/expression_00000_modules_0.dir/expression_00000.cpp.o
[ 37%] Building CXX object CMakeFiles/expression_00000_modules_0.dir/vpi_api.cpp.o
[ 50%] Building CXX object CMakeFiles/expression_00000_modules_0.dir/sim_loop.cpp.o
/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/expression_00000.cpp:19:159: error: taking the address of a temporary object of type 'core::Value4' [-Waddress-of-temporary]
   19 |     y0_ = ((-(b5_.is_one() ? core::Value4(5, -0x6ULL) : core::Value4(4, 0b10ULL).zero_extend(5))) ? core::Logic4(true).zero_extend(4) : (core::sv_reduce_nor((&(a3_ ? a4_ : core::Value4(5, 0x6ULL))))).zero_extend(4));
      |                                                                                                                                                               ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/expression_00000.cpp:47:27: warning: '$' in identifier [-Wdollar-in-identifier-extension]
   47 |     y7_ = (+(core::Logic4($unsigned(b0_) >= __zext(((a0_ >> core::Value4(5, 0x2ULL))), 4)) ^ (-($signed((a2_ !== __zext(a0_, 6))) __slt $unsigned(core::Logic4(b0_ && a1_)))))).zero_extend(5);
      |                           ^
/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/expression_00000.cpp:47:27: error: use of undeclared identifier '$unsigned'; did you mean 'unsigned'?
/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/expression_00000.cpp:47:97: warning: '$' in identifier [-Wdollar-in-identifier-extension]
   47 |     y7_ = (+(core::Logic4($unsigned(b0_) >= __zext(((a0_ >> core::Value4(5, 0x2ULL))), 4)) ^ (-($signed((a2_ !== __zext(a0_, 6))) __slt $unsigned(core::Logic4(b0_ && a1_)))))).zero_extend(5);
      |                                                                                                 ^
/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/expression_00000.cpp:47:112: error: expected expression
   47 |     y7_ = (+(core::Logic4($unsigned(b0_) >= __zext(((a0_ >> core::Value4(5, 0x2ULL))), 4)) ^ (-($signed((a2_ !== __zext(a0_, 6))) __slt $unsigned(core::Logic4(b0_ && a1_)))))).zero_extend(5);
      |                                                                                                                ^
/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/expression_00000.cpp:47:137: warning: '$' in identifier [-Wdollar-in-identifier-extension]
   47 |     y7_ = (+(core::Logic4($unsigned(b0_) >= __zext(((a0_ >> core::Value4(5, 0x2ULL))), 4)) ^ (-($signed((a2_ !== __zext(a0_, 6))) __slt $unsigned(core::Logic4(b0_ && a1_)))))).zero_extend(5);
      |                                                                                                                                         ^
/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/expression_00000.cpp:51:100: error: taking the address of a temporary object of type 'Value4' [-Waddress-of-temporary]
   51 |     y8_ = ((~(+(-((b5_ << b3_))))) ? (+core::Logic4(true).zero_extend(6)) : (core::sv_reduce_or((!(&(b2_ & a3_.sign_extend(6)))))).zero_extend(6));
      |                                                                                                    ^ ~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/expression_00000.cpp:55:35: warning: address of 'this->b1_' will always evaluate to 'true' [-Wpointer-bool-conversion]
   55 |     y9_ = ((core::sv_reduce_nor((&b1_))).zero_extend(6) ^ (core::Value4(6, 0x1ULL) | core::Value4(6, 0x2dULL))).replicate(2);
      |             ~~~~                  ^~~
4 warnings and 4 errors generated.
gmake[4]: *** [CMakeFiles/expression_00000_modules_0.dir/build.make:76: CMakeFiles/expression_00000_modules_0.dir/expression_00000.cpp.o] Error 1
gmake[4]: *** Waiting for unfinished jobs....
gmake[4]: Leaving directory '/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/build'
gmake[3]: *** [CMakeFiles/Makefile2:87: CMakeFiles/expression_00000_modules_0.dir/all] Error 2
gmake[3]: Leaving directory '/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/build'
gmake[2]: *** [Makefile:91: all] Error 2
gmake[2]: Leaving directory '/tmp/ryusim_fuzz_ryusim_e217iwlc/sim_build/build'

make[1]: *** [/usr/local/lib/python3.12/dist-packages/cocotb_tools/makefiles/simulators/Makefile.ryusim:53: sim_build/libexpression_00000.so] Error 1
make: *** [/usr/local/lib/python3.12/dist-packages/cocotb_tools/makefiles/Makefile.inc:17: sim] Error 2
